--- a/Css/desafio.css
+++ b/Css/desafio.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+
 #orcamentoCorpo{
     display: flex;
     flex-direction: column;
